Switching from px to rem for all but breakpoints, borders, and 1px items

--- a/app/assets/stylesheets/acknowledgments.scss
+++ b/app/assets/stylesheets/acknowledgments.scss
@@ -1,11 +1,11 @@
 .acknowledgments-page-body h3 {
-  margin: 0 0 30px;
+  margin: 0 0 2rem;
   text-align: center;
   text-decoration: underline;
 }
 
 .acknowledgments-page-body ul#thanks li {
-  margin-bottom: 10px;
+  margin: .75rem 0;
 }
 
 .acknowledgments-page-body ul#thanks li a {
