--- a/app/assets/stylesheets/privacy.scss
+++ b/app/assets/stylesheets/privacy.scss
@@ -9,7 +9,7 @@ div.privacy-page-container div.jumbotron {
 }
 
 div.privacy-page-container div.jumbotron h3 {
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 
 @media (min-width: 576px) {
