--- a/app/assets/stylesheets/user_fields.scss
+++ b/app/assets/stylesheets/user_fields.scss
@@ -1,6 +1,6 @@
 #user-info-form {
   // background-color: #eee;
-  margin: 30px 15px;
+  margin: 2rem 1rem;
 }
 
 #user-info-form #instructions {
@@ -8,11 +8,7 @@
 }
 
 #user-info-form #user-details #form-fields {
-  margin: 10px 0;
-}
-
-#user-info-form #user-details #form-fields .form-group label {
-  // margin-bottom: 4px;
+  margin: .75rem 0;
 }
 
 #user-info-form #user-details #form-fields .form-group small {
