--- a/app/assets/stylesheets/review.scss
+++ b/app/assets/stylesheets/review.scss
@@ -1,5 +1,5 @@
 #review-page-header {
-  margin: 30px 0;
+  margin: 2rem 0;
   text-align: center;
 }
 
@@ -28,7 +28,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    bottom: -6px;
+    bottom: -0.375rem;
     margin: 0 auto;
   }
 }
