--- a/app/assets/stylesheets/site-header.scss
+++ b/app/assets/stylesheets/site-header.scss
@@ -1,7 +1,7 @@
 .site-header {
   background-color: #f3f2f1;
-  margin: 0 0 30px;
-  padding: 15px;
+  margin: 0 0 2rem;
+  padding: 1rem;
   text-align: center;
 }
 
