More changes for rems and can't use ES6 yet.

--- a/app/assets/stylesheets/campaigns_chunk.scss
+++ b/app/assets/stylesheets/campaigns_chunk.scss
@@ -69,7 +69,7 @@
 .campaigns-chunk .explanation .campaigns .campaign .campaign-name {
   border-bottom: 1px solid #666;
   display: inline-block;
-  font-size: medium;
+  font-size: 1rem;
   line-height: 1.6rem;
   max-width: 75%;
   overflow: hidden;
@@ -100,7 +100,7 @@
 .campaigns-chunk .explanation .campaigns .campaign .borough {
   border: 1px solid #000;
   float: right;
-  font-size: medium;
+  font-size: 1rem;
   padding: 0px 0.25rem;
   text-align: center;
   width: 3.75rem;
