--- a/app/views/application/make_it_easy.html.haml
+++ b/app/views/application/make_it_easy.html.haml
@@ -15,7 +15,7 @@
                 %i.fa.fa-search
               %input.form-control.typeahead{"aria-describedby" => "search-exp", placeholder: "ex: bike lanes, cameras, Queens", type: "text"}
               %span.input-group-btn
-                %button.btn.btn-secondary.clear-search{type: 'button', style: 'display:none', alt: 'clear search', 'aria-hidden' => 'true'}
+                %button.btn.btn-secondary.clear-search{type: 'button', style: 'display:none', 'aria-label' => 'Clear search', 'aria-hidden' => 'true'}
                   %i.fa.fa-times
 
             %div.row.filter-buttons.categories
