--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,6 @@
 !!!
-%html
-  %head{lang: "en"}
+%html{lang: "en"}
+  %head
     %meta{name: "viewport", content:"width=device-width, initial-scale=1.0"}
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %title Safe Streets Simpler
