--- a/app/views/application/_campaign.html.haml
+++ b/app/views/application/_campaign.html.haml
@@ -58,9 +58,13 @@
 
           %a.social-media-share-link.twitter-link{'href' => "https://twitter.com/intent/tweet?status=Sign the petition #{campaign.name}%0A#{campaign_domain}#{campaign.link}", 'target' => '_blank'}
             %i.fa.fa-2x.fa-twitter-square
+            %span.sr-only
+              Share to Twitter
 
           %a.social-media-share-link.facebook-link{'href' => "https://www.facebook.com/sharer/sharer.php?u=#{campaign_domain}#{campaign.link}&title=#{campaign.name}", 'target' => '_blank'}
             %i.fa.fa-2x.fa-facebook-square
+            %span.sr-only
+              Share to Facebook
 
 
         %li.list-group-item.no-padding
