--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -11,12 +11,20 @@
           %div.social-media-links
             %a.social-media-link.twitter{'href' => 'https://twitter.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-twitter
+              %span.sr-only
+                Twitter Account of Brian Howald
             %a.social-media-link.github{'href' => 'https://github.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-github
+              %span.sr-only
+                Github Account of Brian Howald
             %a.social-media-link.linkedin{'href' => 'https://linkedin.com/in/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-linkedin
+              %span.sr-only
+                LinkedIn Account of Brian Howald
             %a.social-media-link.instagram{'href' => 'https://instagram.com/bdhowald', 'target' => '_blank'}
               %i.fa.fa-2x.fa-instagram
+              %span.sr-only
+                Facebook Account of Brian Howald
 
         %div.footer-row
 
